# drift

./: .gitignore  Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh.md  기획서.md
docs/04-report/: changelog.md
docs/archive/2026-03/: _INDEX.md
docs/archive/2026-03/drift-mvp/: drift-mvp.analysis.md  drift-mvp.design.md  drift-mvp.plan.md  drift-mvp.report.md
src/: cli.rs  error.rs  main.rs  types.rs
src/output/: json.rs  mod.rs  table.rs
src/parsers/: mod.rs  package_json.rs
src/providers/: github.rs  mod.rs  npm.rs  osv.rs
src/scorer/: mod.rs  model.rs  signals.rs
tests/: cli_tests.rs
tests/fixtures/: package.json  package_empty.json  package_workspace.json
